@@ -115,7 +115,7 @@ enum _MnoteOlympusTag {
 	MNOTE_OLYMPUS_TAG_ONETOUCHWB		= 0x0302,
 	MNOTE_OLYMPUS_TAG_WHITEBALANCEBRACKET	= 0x0303,
 	MNOTE_OLYMPUS_TAG_WHITEBALANCEBIAS	= 0x0304,
-	MNOTE_OLYMPUS_TAG_UNKNOWN_5		= 0x0f00,
+	MNOTE_OLYMPUS_TAG_DATADUMP		= 0x0f00,
 	MNOTE_OLYMPUS_TAG_UNKNOWN_4		= 0x0f04,
 	MNOTE_OLYMPUS_TAG_SHUTTERSPEED		= 0x1000,
 	MNOTE_OLYMPUS_TAG_ISOVALUE		= 0x1001,
@@ -167,6 +167,7 @@ enum _MnoteOlympusTag {
 	MNOTE_SANYO_TAG_SEQUENTIALSHOT		= 0x020e,
 	MNOTE_SANYO_TAG_WIDERANGE		= 0x020f,
 	MNOTE_SANYO_TAG_COLORADJUSTMENTMODE	= 0x0210,
+	MNOTE_SANYO_TAG_FOCUSMODE		= 0x0212,
 	MNOTE_SANYO_TAG_QUICKSHOT		= 0x0213,
 	MNOTE_SANYO_TAG_SELFTIMER		= 0x0214,
 	MNOTE_SANYO_TAG_VOICEMEMO		= 0x0216,
@@ -174,6 +175,7 @@ enum _MnoteOlympusTag {
 	MNOTE_SANYO_TAG_FLICKERREDUCE		= 0x0218,
 	MNOTE_SANYO_TAG_OPTICALZOOM		= 0x0219,
 	MNOTE_SANYO_TAG_DIGITALZOOM		= 0x021b,
+	MNOTE_SANYO_TAG_CCDSENSITIVITY		= 0x021a,
 	MNOTE_SANYO_TAG_LIGHTSOURCESPECIAL	= 0x021d,
 	MNOTE_SANYO_TAG_RESAVED			= 0x021e,
 	MNOTE_SANYO_TAG_SCENESELECT		= 0x021f,
@@ -183,7 +185,7 @@ enum _MnoteOlympusTag {
 	/* Epson */
 	MNOTE_EPSON_TAG_IMAGE_WIDTH		= 0x020b,
 	MNOTE_EPSON_TAG_IMAGE_HEIGHT		= 0x020c,
-	MNOTE_EPSON_TAG_OEM_MODEL		= 0x020d,
+	MNOTE_EPSON_TAG_SOFTWARE		= 0x020d,
 };
 typedef enum _MnoteOlympusTag MnoteOlympusTag;
 
@@ -191,6 +193,7 @@ typedef enum _MnoteOlympusTag MnoteOlympusTag;
 #define MNOTE_OLYMPUS_TAG_UNKNOWN_1	MNOTE_OLYMPUS_TAG_BWMODE
 #define MNOTE_OLYMPUS_TAG_UNKNOWN_2	MNOTE_OLYMPUS_TAG_FOCALPLANEDIAGONAL
 #define MNOTE_OLYMPUS_TAG_UNKNOWN_3	MNOTE_OLYMPUS_TAG_LENSDISTORTION
+#define MNOTE_OLYMPUS_TAG_UNKNOWN_5	MNOTE_OLYMPUS_TAG_DATADUMP
 
 /*! Return a textual name of the given tag within the Olympus-style MakerNote.
  * The name is a short, unique, non-localized text string containing only
